--- a/verb.tex
+++ b/verb.tex
@@ -49,17 +49,27 @@
 				\hline
 				\textbf{Français} & \textbf{Rõmaji} & \textbf{Hiragana -masu} \\
 				\hline
-				se coucher & nemasu & ねます \\	
+				se \textbf{coucher} & nemasu & ねます \\	
 				\hline 
-				prendre une douche & abimasu & あびます \\
+				\textbf{descendre} de & orimasu & おります \\
 				\hline
-				prendre une photo & torimasu & とります \\
+				\textbf{enseigner/indiquer} & oshiemasu & おしえます \\
 				\hline
-				se lever & okimasu & おきます \\
+				\textbf{fermer} & shimemasu & しめます \\
 				\hline
-				manger & tabemasu & たべます \\
+				se \textbf{lever} & okimasu & おきます \\
 				\hline
-				rencontrer & aimasu & あいます \\
+				\textbf{manger} & tabemasu & たべます \\
+				\hline
+				\textbf{montrer} & misemasu & みせます \\
+				\hline
+				\textbf{ouvrir} & akemasu & あけます \\
+				\hline
+				\textbf{prendre une douche} & abimasu & あびます \\
+				\hline
+				\textbf{prendre une photo} & torimasu & とります \\
+				\hline
+				\textbf{rencontrer} & aimasu & あいます \\
 				\hline
 			\end{tabular}
 	\end{center}
@@ -75,33 +85,49 @@
 				\hline
 				\textbf{Français} & \textbf{Rõmaji} & \textbf{Hiragana -masu} \\
 				\hline
-				acheter & kaimasu & かいます \\
+				\textbf{acheter} & kaimasu & かいます \\
 				\hline
-				aller & ikimasu & いきます \\
+				\textbf{aller} & ikimasu & いきます \\
 				\hline
-				boire & nomimasu & のみます \\
+				\textbf{appeler} (voix) & yobimasu & よびます \\
 				\hline
-				se brosser les dents & migakimasu & みがきます \\
+				\textbf{apprendre} & naraimasu & ならいます \\
 				\hline
-				écouter & kikimasu & ききます \\
+				\textbf{boire} & nomimasu & のみます \\
 				\hline
-				écrire & kakimasu & かきます \\
+				se \textbf{brosser les dents} & migakimasu & みがきます \\
 				\hline
-				être/se situer (objet) & arimasu & あります \\
+				\textbf{chanter} & utaimasu & うたいます \\
 				\hline
-				se déshabiller & nugimasu & ぬぎます \\
+				\textbf{créer} & tsukurimasu & つくります \\
 				\hline
-				lire & yomimasu & よみます \\
+				\textbf{écouter} & kikimasu & ききます \\
 				\hline
-				parler & hanashimasu & はなします \\
+				\textbf{écrire} & kakimasu & かきます \\
 				\hline
-				regarder & mimasu & みます \\
+				\textbf{éteindre} & keshimasu & けします \\
 				\hline
-				rentrer & kaerimasu & かえります \\
+				\textbf{être/se situer} (objet) & arimasu & あります \\
 				\hline
-				téléphoner & kakemasu & かけます \\
+				se \textbf{déshabiller} & nugimasu & ぬぎます \\
 				\hline
-				terminer & owarimasu & おわります \\
+				se \textbf{laver} & araimasu & あらいます \\
+				\hline
+				\textbf{lire} & yomimasu & よみます \\
+				\hline
+				\textbf{monter} dans & norimasu & のります \\
+				\hline
+				\textbf{parler} & hanashimasu & はなします \\
+				\hline
+				\textbf{regarder} & mimasu & みます \\
+				\hline
+				\textbf{rentrer} & kaerimasu & かえります \\
+				\hline
+				\textbf{sortir} & demasu & でる \\
+				\hline
+				\textbf{téléphoner} & kakemasu & かけます \\
+				\hline
+				\textbf{terminer} & owarimasu & おわります \\
 				\hline
 			\end{tabular}
 	\end{center}
