--- a/verb.tex
+++ b/verb.tex
@@ -123,11 +123,13 @@
 				\hline
 				\textbf{rentrer} & kaerimasu & かえります \\
 				\hline
-				\textbf{sortir} & demasu & でる \\
+				\textbf{sortir} & demasu & でます \\
 				\hline
 				\textbf{téléphoner} & kakemasu & かけます \\
 				\hline
 				\textbf{terminer} & owarimasu & おわります \\
+				\hline
+				\textbf{utiliser} & tsukaimasu & つかいます \\
 				\hline
 			\end{tabular}
 	\end{center}
