reorganize grammar adjectif + progressing

--- a/grammar.tex
+++ b/grammar.tex
@@ -21,7 +21,7 @@
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
-\definecolor{blue}{rgb}{0,0,0.7}
+\definecolor{blue}{RGB}{93,120,237}
 \renewcommand{\arraystretch}{1.2}
 \newcommand{\hsp}{\hspace{20pt}}
 \titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter\hsp{|}\hsp}{0pt}{\Huge\bfseries}
@@ -36,28 +36,46 @@
 	Frédéric Nguyen \\ Club*Nix
 }
 
+%\begin{CJK}{UTF8}{}  
+%\begin{Japanese}
+%\end{Japanese}  
+%\end{CJK}
+
 \begin{document}
 \maketitle
 \tableofcontents
 
-\chapter{Adjectifs forme en i}
+\chapter{Adjectifs}
 
-\section{Formes}
+\section{Adjectifs en i}
 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
+	\begin{flushleft}
+	Un adjectif est plac\'e juste devant le nom qu'il qualifie : \\
+	わたしは　\textcolor{blue}{おもしろい}　ほんを　よみました。 \\
+	J'ai lu un livre intéressant.
+	\end{flushleft}
+\end{Japanese}  
+\end{CJK}
+
+\subsection{Les formes}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens \`a la phrase.
 	\begin{center}
 		\begin{tabular}{|c|c|c|}
 			\hline
 			\textbf{Forme} & \textbf{Roumaji} & \textbf{Hiragana} \\
 			\hline
-			Affirmative & atsui & あつい \\
+			Affirmative & atsui & あつ\textcolor{red}{い} \\
 			\hline
-			Négative & atsukunai & あつくない \\
+			Négative & atsukunai & あつ\textcolor{red}{くない} \\
 			\hline
-			Affirmative passée & atsukatta & あつかった \\
+			Affirmative passée & atsukatta & あつ\textcolor{red}{かった} \\
 			\hline
-			Négative passée & tsukunakatta & あtしゅくなかった \\
+			Négative passée & atsukunakatta & あつ\textcolor{red}{くなかった} \\
 			\hline 
 		\end{tabular}
 	\end{center}
@@ -65,13 +83,53 @@
 	- いい \\
 	- よくない \\
 	- よかった \\
-	- よくなかった \\ \\
-	
-	Autre forme d'adjectif dans les phrases pour dire "ça a l'air ..." \\
-	Les hiraganas sont faciles : ひらがなは　やさしい　です。 \\
-	Les hiraganas ont l'air facile : ひらがなは　やさしそう　です。 \\
+	- よくなかった
 \end{Japanese}  
-\end{CJK}  
+\end{CJK}
+
+\subsection{Addition d'adjectifs}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	On peut attribuer plusieurs adjectifs à un même nom en mettant tous les adjectifs à la suite, mais il faut changer le caractère \textcolor{red}{い} \, en \textcolor{red}{くて}, mais le dernier adjectif devra rester sans modification. \\ \\
+	\textcolor{blue}{あたらし\underline{くて}}　\textcolor{blue}{たか\underline{い}}　くるま。 \\
+	Une voiture nouvelle et chère.
+\end{Japanese}  
+\end{CJK}
+
+\subsection{Impression}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	\begin{flushleft}
+	Autre forme d'adjectif dans les phrases pour dire "ça a l'air ..." \\
+	Les hiraganas sont faciles : ひらがなは　\textcolor{blue}{やさしい}　です。 \\
+	Les hiraganas ont l'air facile : ひらがなは　\textcolor{blue}{やさし\underline{そう}}　です。
+	\end{flushleft}
+\end{Japanese}  
+\end{CJK}
+
+\section{Adjectifs en na}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	Avec les adjectifs en na, on peut le placer dans la phrase comme un adjectif en i, mais il faut ajouter la particule \textcolor{red}{な} \,juste après l'adjectif. \\ \\
+	\textcolor{blue}{きれい\underline{な}}　はな。\\
+	Une jolie fleur.
+\end{Japanese}  
+\end{CJK}
+
+\subsection{Addition d'adjectifs}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	Aussi comme les adjectifs en i, on peut lister les adjectifs \`a la suite en remplaçant le \textcolor{red}{な} \,par \textcolor{red}{で} \,et en laissant le dernier adjectif intact. \\ \\
+	1. \textcolor{blue}{きれい\underline{で}}　ちいさい　はな。 \\
+	Une belle et petite fleur. \\ \\
+	2. やすくて　にぎやかな　レストラン。 \\
+	Un restaurant animé et pas cher.
+\end{Japanese}  
+\end{CJK}
 
 \chapter{Verbes}
 
@@ -100,7 +158,9 @@
 	2. わtしは　サンドイッチを　たべて　います。 \\
 	Je suis en train de manger un sandwich. \\ \\
 	3. かいても　いいですか。 \\
-	Puis-je écrire ?
+	Puis-je écrire ? \\ \\
+	4. わたしは　すしを　たべて　テレビを　みます。 \\
+	Je mange des sushis et je regarde la télévision.
 \end{Japanese}  
 \end{CJK}
 
