--- a/grammar.tex
+++ b/grammar.tex
@@ -31,7 +31,7 @@
 	urlcolor=blue           	% color of external links
 }
 
-\title{Cours de japonais}
+\title{Japonais - Grammaire}
 \author{
 	Frédéric Nguyen \\ Club*Nix
 }
@@ -119,6 +119,14 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 \end{Japanese}  
 \end{CJK}
 
+\subsection{Négation}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	
+\end{Japanese}  
+\end{CJK}
+
 \subsection{Addition d'adjectifs}
 
 \begin{CJK}{UTF8}{}  
@@ -127,7 +135,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 	1. \textcolor{blue}{きれい\underline{で}}　ちいさい　はな。 \\
 	Une belle et petite fleur. \\ \\
 	2. やすくて　にぎやかな　レストラン。 \\
-	Un restaurant animé et pas cher.
+	Un restaurant anim\'e et pas cher.
 \end{Japanese}  
 \end{CJK}
 
@@ -244,8 +252,35 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 	2. たこさんを　\underline{よび}なくてもいいです。 (\underline{よび}ます) \\
 	Ce n'est pas la peine d'appeler monsieur Poulpe. \\ \\
 	3. あさっては　がっこうへ　いきなくてもいいです。 \\
-	Ce n'est pas la peine d'aller à \, l'école après-demain.
+	Ce n'est pas la peine d'aller \`a l'école après-demain.
 \end{Japanese}  
 \end{CJK}
+
+\chapter{Comparaison}
+
+\section{Comparatif}
+
+\subsection{Comparer}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	Pour comparer un objet A à un objet B, on utilise より. \\ \\
+	1. \textcolor{red}{ねこ}　は　\textcolor{blue}{いぬ}　\underline{より}　かっくい　です。 \\
+	Comparés aux \textcolor{blue}{chiens}, les \textcolor{red}{chats} sont plus cools. \\ \\
+	2. \textcolor{red}{パソコン}　は　\textcolor{blue}{車}　より　やすい　です。 \\
+	Comparés aux \textcolor{blue}{voitures}, les \textcolor{red}{ordinateurs} sont \`a plus petit prix.
+\end{Japanese}  
+\end{CJK}
+
+\subsection{Question}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	Pour demander une comparaison entre deux choses, on liste les deux objets avec la particule と après chacun puis on fait suivre avec どちらが pour préciser lequel d'entre eux est le plus qualifié par l'adjectif. (Explication dont on peut se passer...). \\ \\
+	1. 
+\end{Japanese}  
+\end{CJK}
+
+\section{Superlatif}
 
 \end{document}
