--- a/verb.tex
+++ b/verb.tex
@@ -31,7 +31,7 @@
 	urlcolor=blue           	% color of external links
 }
 
-\title{Cours de japonais}
+\title{Japonais - Verbes rencontrés}
 \author{
 	Frédéric Nguyen \\ Club*Nix
 }
