first adjective list

--- a/adjectif.tex
+++ b/adjectif.tex
@@ -32,7 +32,7 @@
 }
 
 \usepackage{multicol}
-\setlength\columnsep{-13.1em}
+\setlength\columnsep{-9.4em}
 %\setlength\columnseprule{.4pt}
 \title{Japonais - Adjectifs rencontrés}
 \author{
@@ -53,15 +53,96 @@
 				\hline
 				\textbf{Français} & \textbf{Rõmaji} & \textbf{Hiragana} \\
 				\hline
-				\textbf{froid} & samui & さむい \\
+				\textbf{chaud} & atsui & あつい \\%0
 				\hline
+				\textbf{chaud} & atsui & あつい \\%1
+				\hline
+				\textbf{haut} & takai & たかい \\%2
+				\hline
+				\textbf{cher} & takai & たかい \\%3
+				\hline
+				\textbf{grand} & ookii & おおきい \\%3
+				\hline
+				\textbf{long} & nagai & ながい \\%5
+				\hline
+				\textbf{difficile} & muzukashii & むずかしい \\%6
+				\hline
+				\textbf{neuf} & atarashii & あたらしい \\%7
+				\hline
+				\textbf{rapide/tot} & hayai & はやい \\%8 %ma touche pour l'accent circonflexe veux pas fonctinner : (
+				\hline
+				\textbf{interessant} & omoshiroi & おもしろい \\%9
+				\hline
+				\textbf{délicieux} & oishii & おいしい \\%10
+				\hline
+				\textbf{bon} & ii & いい \\%11
+				\hline
+%				\textbf{} &  &  \\%12
+%				\hline
+%				\textbf{} &  &  \\%13
+%				\hline
+%				\textbf{} &  &  \\%14
+%				\hline
+%				\textbf{} &  &  \\%15
+%				\hline
+%				\textbf{} &  &  \\%16
+%				\hline
+%				\textbf{} &  &  \\%17
+%				\hline
+%				\textbf{} &  &  \\%18
+%				\hline
+%				\textbf{} &  &  \\%19
+%				\hline
+%				\textbf{} &  &  \\%20
+%				\hline
+
 			\end{tabular}
 			\begin{tabular}{|c|c|c|}
 				\hline
 				\textbf{Hiragana} & \textbf{Rõmaji} & \textbf{Français} \\
 				\hline
-				あつい & atsui & \textbf{chaud}\\
-				\hline 		
+				さむい & samui & \textbf{froid} \\%0
+				\hline
+				つめたい & tsumetaii & \textbf{frais} \\%1
+				\hline
+				ひくい & hikui & \textbf{bas} \\%2
+				\hline
+				やすい & yasui & \textbf{pas cher} \\%3
+				\hline
+				ちいさい & chiisai & \textbf{petit} \\%4
+				\hline
+				みじかい & mijikai & \textbf{court} \\%5
+				\hline
+				やさしい & yasashii & \textbf{facile} \\%6
+				\hline
+				ふるい & furui & \textbf{ancien} \\%7
+				\hline
+				おそい & osoi & \textbf{lent/tard} \\%8
+				\hline
+				つまらない & tsumaranai & \textbf{ennuyeux} \\%9
+				\hline
+				まずい & mazui & \textbf{fade} \\%10
+				\hline
+				わるい & warui & \textbf{mauvais} \\%11
+				\hline
+%				\textbf{} &  &  \\%12
+%				\hline
+%				\textbf{} &  &  \\%13
+%				\hline
+%				\textbf{} &  &  \\%14
+%				\hline
+%				\textbf{} &  &  \\%15
+%				\hline
+%				\textbf{} &  &  \\%16
+%				\hline
+%				\textbf{} &  &  \\%17
+%				\hline
+%				\textbf{} &  &  \\%18
+%				\hline
+%				\textbf{} &  &  \\%19
+%				\hline
+%				\textbf{} &  &  \\%20
+%				\hline
 			\end{tabular}
 		\end{multicols}
 	\end{center}
