added color adjective

--- a/adjectif.tex
+++ b/adjectif.tex
@@ -103,7 +103,7 @@
 				\hline
 				さむい & samui & \textbf{froid} \\%0
 				\hline
-				つめたい & tsumetaii & \textbf{frais} \\%1
+				つめたい & tsumetai & \textbf{frais} \\%1
 				\hline
 				ひくい & hikui & \textbf{bas} \\%2
 				\hline
@@ -145,6 +145,38 @@
 %				\hline
 			\end{tabular}
 		\end{multicols}
+		~\\
+		\begin{tabular}{|c|c|c|}
+			\hline
+			\textbf{Hiragana} & \textbf{Rõmaji} & \textbf{Français} \\
+			\hline
+			\textbf{rouge} & akai & あかい \\
+			\hline
+			\textbf{bleu} & aoi & あおい \\
+			\hline
+			\textbf{blanc} & shiroi & しろい \\
+			\hline
+			\textbf{noir} & kuroi & くろい \\
+			\hline
+			\textbf{jaune} & kiiroi & きいろい \\
+			\hline
+%			\textbf{} &  &  \\
+%			\hline
+%			\textbf{} &  &  \\
+%			\hline
+%			\textbf{} &  &  \\
+%			\hline
+%			\textbf{} &  &  \\
+%			\hline
+%			\textbf{} &  &  \\
+%			\hline
+%			\textbf{} &  &  \\
+%			\hline
+%			\textbf{} &  &  \\
+%			\hline
+%			\textbf{} &  &  \\
+%			\hline
+		\end{tabular}
 	\end{center}
 \end{Japanese}  
 \end{CJK}
