added color to color adjective

--- a/adjectif.tex
+++ b/adjectif.tex
@@ -8,7 +8,7 @@
 \usepackage{titlesec, blindtext}
 \usepackage{multirow}
 \usepackage{listings}
-\usepackage{color}
+\usepackage[usenames,dvipsnames]{color}
 \usepackage{fixltx2e}
 \usepackage{graphicx}
 \usepackage{amsmath}
@@ -69,7 +69,7 @@
 				\hline
 				\textbf{neuf} & atarashii & あたらしい \\%7
 				\hline
-				\textbf{rapide/tot} & hayai & はやい \\%8 %ma touche pour l'accent circonflexe veux pas fonctinner : (
+				\textbf{rapide/t\^ot} & hayai & はやい \\%8 %ma touche pour l'accent circonflexe veux pas fonctinner : (
 				\hline
 				\textbf{interessant} & omoshiroi & おもしろい \\%9
 				\hline
@@ -150,15 +150,15 @@
 			\hline
 			\textbf{Hiragana} & \textbf{Rõmaji} & \textbf{Français} \\
 			\hline
-			\textbf{rouge} & akai & あかい \\
+			\textbf{rouge} & akai & \textcolor{red}{あかい} \\
 			\hline
-			\textbf{bleu} & aoi & あおい \\
+			\textbf{bleu} & aoi & \textcolor{blue}{あおい} \\
 			\hline
-			\textbf{blanc} & shiroi & しろい \\
+			\textbf{blanc} & shiroi & \textcolor{gray}{しろい} \\
 			\hline
-			\textbf{noir} & kuroi & くろい \\
+			\textbf{noir} & kuroi & \textcolor{black}{くろい} \\
 			\hline
-			\textbf{jaune} & kiiroi & きいろい \\
+			\textbf{jaune} & kiiroi & \textcolor{Goldenrod}{きいろい} \\
 			\hline
 %			\textbf{} &  &  \\
 %			\hline
