fix color color's

--- a/adjectif.tex
+++ b/adjectif.tex
@@ -154,11 +154,11 @@
 			\hline
 			\textbf{bleu} & aoi & \textcolor{blue}{あおい} \\
 			\hline
-			\textbf{blanc} & shiroi & \textcolor{gray}{しろい} \\
+			\textbf{blanc} & shiroi & \textcolor[rgb]{0.75,0.75,0.75}{しろい} \\
 			\hline
 			\textbf{noir} & kuroi & \textcolor{black}{くろい} \\
 			\hline
-			\textbf{jaune} & kiiroi & \textcolor{Goldenrod}{きいろい} \\
+			\textbf{jaune} & kiiroi & \textcolor[rgb]{0.9,0.8,0}{きいろい} \\
 			\hline
 %			\textbf{} &  &  \\
 %			\hline
