--- a/grammar.tex
+++ b/grammar.tex
@@ -264,7 +264,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
-	Pour comparer un objet A à un objet B, on utilise より. \\ \\
+	Pour comparer un objet A \`a un objet B, on utilise より. \\ \\
 	1. \textcolor{red}{ねこ}　は　\textcolor{blue}{いぬ}　\underline{より}　かっくい　です。 \\
 	Comparés aux \textcolor{blue}{chiens}, les \textcolor{red}{chats} sont plus cools. \\ \\
 	2. \textcolor{red}{パソコン}　は　\textcolor{blue}{車}　より　やすい　です。 \\
@@ -276,11 +276,24 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
-	Pour demander une comparaison entre deux choses, on liste les deux objets avec la particule と après chacun puis on fait suivre avec どちらが pour préciser lequel d'entre eux est le plus qualifié par l'adjectif. (Explication dont on peut se passer...). \\ \\
-	1. 
+	Pour demander une comparaison entre deux choses, on liste les deux objets avec la particule と après chacun puis on fait suivre avec どちらが \, pour préciser lequel d'entre eux est le plus qualifié par l'adjectif. (Explication dont on peut se passer...). \\ \\
+	1. にほんごと　えいごと　どちら　が　たさしい　ですか。 \\
+	Quel est le plus facile entre le japonais et l'anglais ?
 \end{Japanese}  
 \end{CJK}
 
 \section{Superlatif}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	Le superlatif permet de désigner un numéro1 \`a partir d'une liste d'éléments ou d'un thème en général. Et une petite forme générale : \\
+	Thème/liste, interrogatif(doko, dare...) が　いちばん \, adj ですか。 \\ \\
+	1. \textcolor{blue}{あなたの　ともだち}で　だれ　が　いちばん　\underline{たかい}　ですか。 \\
+	Parmi \textcolor{blue}{tes amis}, qui est le plus \underline{grand} ? \\ \\
+	2. くるまと　ひこうきと　じでんしゃと　なに　が　いちばん　はやい　ですか。 \\
+	Entre les voitures, les avions et les vélos, qu'est-ce qui est le plus rapide ?
+	
+\end{Japanese}  
+\end{CJK}
 
 \end{document}
