--- a/adjectif.tex
+++ b/adjectif.tex
@@ -36,7 +36,7 @@
 %\setlength\columnseprule{.4pt}
 \title{Japonais - Adjectifs rencontrés}
 \author{
-	Frédéric Nguyen \\ Club*Nix
+	Club*Nix
 }
 
 \begin{document}
@@ -77,8 +77,8 @@
 				\hline
 				\textbf{bon} & ii & いい \\%11
 				\hline
-%				\textbf{} &  &  \\%12
-%				\hline
+				\textbf{lourd} & omoi & おもい \\%12
+				\hline
 %				\textbf{} &  &  \\%13
 %				\hline
 %				\textbf{} &  &  \\%14
@@ -125,23 +125,23 @@
 				\hline
 				わるい & warui & \textbf{mauvais} \\%11
 				\hline
-%				\textbf{} &  &  \\%12
+				かるい & karui & \textbf{léger} \\%12
+				\hline
+%				 &  & \textbf{} \\%13
 %				\hline
-%				\textbf{} &  &  \\%13
+%				 &  & \textbf{} \\%14
 %				\hline
-%				\textbf{} &  &  \\%14
+%				 &  & \textbf{} \\%15
 %				\hline
-%				\textbf{} &  &  \\%15
+%				 &  & \textbf{} \\%16
 %				\hline
-%				\textbf{} &  &  \\%16
+%				 &  & \textbf{} \\%17
 %				\hline
-%				\textbf{} &  &  \\%17
+%				 &  & \textbf{} \\%18
 %				\hline
-%				\textbf{} &  &  \\%18
+%				 &  & \textbf{} \\%19
 %				\hline
-%				\textbf{} &  &  \\%19
-%				\hline
-%				\textbf{} &  &  \\%20
+%				 &  & \textbf{} \\%20
 %				\hline
 			\end{tabular}
 		\end{multicols}
