--- a/grammar.tex
+++ b/grammar.tex
@@ -33,7 +33,7 @@
 
 \title{Japonais - Grammaire}
 \author{
-	Frédéric Nguyen \\ Club*Nix
+	Club*Nix
 }
 
 %\begin{CJK}{UTF8}{}  
@@ -159,20 +159,33 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 			します -> して \\
 			いきます -> いって
 	\end{description}
-	\hfill \\
-	Utilisation possibles avec la forme en te : \\ \\
-	1. のんで　ください。 \\
-	Buvez-s'il vous plait. \\ \\
-	2. わtしは　サンドイッチを　たべて　います。 \\
-	Je suis en train de manger un sandwich. \\ \\
-	3. かいても　いいですか。 \\
-	Puis-je écrire ? \\ \\
-	4. わたしは　すしを　たべて　テレビを　みます。 \\
-	Je mange des sushis et je regarde la télévision.
 \end{Japanese}  
 \end{CJK}
 
-\section{Forme négative}
+\subsection{Utilisations}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	\begin{description}
+		\item[Le S'il vous plaît : \textcolor{blue}{\underline{v}て　ください}] \hfill \\
+			1. のんで　ください。 \\
+			Buvez-s'il vous plait.
+		\item[Action en cours : \textcolor{blue}{\underline{v}て　います}] \hfill \\
+			2. わtしは　サンドイッチを　たべて　います。 \\
+			Je suis en train de manger un sandwich.
+		\item[Permission : \textcolor{blue}{\underline{v}ても　いいですか}] \hfill \\
+			3. かいても　いいですか。 \\
+			Puis-je écrire ?
+		\item[Addition de verbes : \textcolor{blue}{\underline{v}て　\underline{v}て　\underline{v}ます}] \hfill \\
+			4. わたしは　すしを　たべて　テレビを　みます。 \\
+			Je mange des sushis et je regarde la télévision. 
+	\end{description}
+\end{Japanese}  
+\end{CJK}
+
+%TODO sunde imasu and cie.
+
+\section{Forme en a}
 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
@@ -191,8 +204,14 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 			します -> しない \\
 			きます -> こない
 	\end{description}
-	\hfill \\
-	Exemples : \\ \\
+\end{Japanese}  
+\end{CJK}
+
+\subsection{Négation}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	Construction de base : \underline{v}ないで　ください \\ \\
 	1. この　いぬを　たべないで　ください。 \\
 	Ne mange pas cette viande. \\ \\
 	2. まどを　あけないで　ください。\\
@@ -222,6 +241,23 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 \end{Japanese}  
 \end{CJK}
 
+\subsection{Utilisations}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	\begin{description}
+		\item[Savoir faire : \textcolor{blue}{\underline{vfn} こと　が　できます}] \hfill \\
+		1. わたし　は　ひらがな　かく こと が　できます。 \\
+		Je sais écrire les hiraganas. \\ \\
+		2. うまに　のる こと が　です。 \\
+		Je sais monter \`a cheval. \\
+		\emph{Attention, la fin de phrase change quand on fait avec un verbe. Ici, uma ni norimasu c'est le verbe monter à cheval.}
+		\item[Avant de : \textcolor{blue}{\underline{vfn} まえに　\underline{\qquad}ます}]
+	\end{description}
+\end{Japanese}  
+\end{CJK}
+
+
 \chapter{Obligation}
 
 \section{Forme d'obligation}
@@ -244,7 +280,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
-	\underline{\emph{verbe}}なくてもいいです。-> Ce n'est pas la peine, pas obligé de... \\
+	\underline{\emph{verbe}}なくてもいいです。-> Ce n'est pas la peine, pas oblig\'e de... \\
 	
 	Exemples : \\ \\
 	1. この　てがみを　\underline{かき}なくてもいいです。 (\underline{かき}ます) \\
@@ -286,7 +322,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
-	Le superlatif permet de désigner un numéro1 \`a partir d'une liste d'éléments ou d'un thème en général. Et une petite forme générale : \\
+	Le superlatif permet de désigner un numéro1 \`a partir d'une liste d'éléments (minimum 3) ou d'un thème en général. Et une petite forme générale : \\
 	Thème/liste, interrogatif(doko, dare...) が　いちばん \, adj ですか。 \\ \\
 	1. \textcolor{blue}{あなたの　ともだち}で　だれ　が　いちばん　\underline{たかい}　ですか。 \\
 	Parmi \textcolor{blue}{tes amis}, qui est le plus \underline{grand} ? \\ \\
