first semester done, i think

--- a/grammar.tex
+++ b/grammar.tex
@@ -99,6 +99,8 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 
 \subsection{Impression}
 
+%TODO REDO
+
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
 	\begin{flushleft}
@@ -106,6 +108,18 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 	Les hiraganas sont faciles : ひらがなは　\textcolor{blue}{やさしい}　です。 \\
 	Les hiraganas ont l'air facile : ひらがなは　\textcolor{blue}{やさし\underline{そう}}　です。
 	\end{flushleft}
+\end{Japanese}  
+\end{CJK}
+
+\subsection{Avec devenir}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	Construction de base : \underline{radical adj-i}く　なります \\ \\
+	1. この　まんが　は　だんだん　\underline{おもしろ\textcolor{red}{く}}　なります。 \\
+	Ce livre devient de plus en plus intéressant. \\ \\
+	2. こども　は　\underline{おおき\textcolor{red}{く}}　なります。 \\
+	Les enfants deviennent grands.
 \end{Japanese}  
 \end{CJK}
 
@@ -139,7 +153,37 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 \end{Japanese}  
 \end{CJK}
 
+\subsection{Avec devenir}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	Construction de base : \underline{adj-na} に　なります \\ \\
+	3. パソコン ハ　ダンダン　\underline{べんり\textcolor{red}{に}}　なります。 \\
+	Les ordinateurs deviennent de plus en plus pratiques. \\ \\
+	4. わたし　は　テニス　が　\underline{じょうず\textcolor{red}{に}}　なります。 \\
+	Je deviens meilleur au tennis.
+\end{Japanese}  
+\end{CJK}
+
 \chapter{Verbes}
+
+\section{Forme en masu}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	La forme avec laquelle on a commenc\'e \`a apprendre les verbes. Est aussi marque de politesse. \\
+	\begin{description}
+		\item[Présent] \hfill \\
+		たべます
+		\item[Négatif] \hfill \\
+		たべません
+		\item[Passé] \hfill \\
+		たべました
+		\item[Néégatif passé] \hfill \\
+		たべません　でした
+	\end{description}
+\end{Japanese}  
+\end{CJK}
 
 \section{Forme en te}
 
@@ -178,12 +222,27 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 			Puis-je écrire ?
 		\item[Addition de verbes : \textcolor{blue}{\underline{v}て　\underline{v}て　\underline{v}ます}] \hfill \\
 			4. わたしは　すしを　たべて　テレビを　みます。 \\
-			Je mange des sushis et je regarde la télévision. 
+			Je mange des sushis et je regarde la télévision.  \\
+			\item[Etat en cours] \hfill \\
+			\begin{description}
+				\item[Habiter : \textcolor{blue}{\underline{\qquad} に　すんで　います}] \hfill \\
+				5. わたし　は　フランス に　すんで　います。 \\
+				J'habite en France.
+				\item[Connaître] \hfill \\
+				6. わたし　は　ピカチュ を　しって　います。 \\
+				Je connais Pikachu. \\
+				\emph{negatif : しりません}
+				\item[Possession : \textcolor{blue}{\underline{\qquad}を　もって　います}] \hfill \\
+				7. わたし　は　いぬ　をもって　います。 \\
+				Je possède un chien.
+				\item[Etre mari\'e] \hfill \\
+				8. けっこん　して　います。 \\
+				Je suis marié. \\
+				\emph{Célibataire : どくしん}
+			\end{description}
 	\end{description}
 \end{Japanese}  
 \end{CJK}
-
-%TODO sunde imasu and cie.
 
 \section{Forme en a}
 
@@ -207,16 +266,22 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 \end{Japanese}  
 \end{CJK}
 
-\subsection{Négation}
+\subsection{Utilisations}
 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
-	Construction de base : \underline{v}ないで　ください \\ \\
-	1. この　いぬを　たべないで　ください。 \\
-	Ne mange pas cette viande. \\ \\
-	2. まどを　あけないで　ください。\\
-	N'ouvre pas les fenêtres.
-\end{Japanese}  
+	\begin{description}
+		\item[Négation : \textcolor{blue}{\underline{v}ないで　ください}] \hfill \\
+		1. この　ほんを　のまないで　ください。 \\
+		Ne lit pas ce livre.
+		\item[Obligation : \textcolor{blue}{\underline{$v_{a}$}なければ　なりません}] \hfill \\
+		2. くすりを　のみますから　\underline{ね}なければなりません。 \\
+		Il faut dormir après avoir bu ses médicaments.
+		\item[Non obligation : \textcolor{blue}{\underline{$v_{a}$}なくても　いいです}] \hfill \\
+		3. あさっては　がっこうへ　いきなくてもいいです。 \\
+		Ce n'est pas la peine d'aller \`a l'école après-demain.
+	\end{description}
+\end{Japanese}
 \end{CJK}
 
 \section{Forme neutre}
@@ -252,43 +317,13 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 		2. うまに　のる こと が　です。 \\
 		Je sais monter \`a cheval. \\
 		\emph{Attention, la fin de phrase change quand on fait avec un verbe. Ici, uma ni norimasu c'est le verbe monter à cheval.}
-		\item[Avant de : \textcolor{blue}{\underline{vfn} まえに　\underline{\qquad}ます}]
+		\item[Avant de : \textcolor{blue}{\underline{vfn} まえに　\underline{\qquad}ます}] \hfill \\
+		3. わたし　は　\textcolor{red}{しごとに　いく}　まえに　\textcolor{blue}{くすりを　のみます}。 \\
+		Je \textcolor{blue}{bois mes médicaments} avant d'\textcolor{red}{aller au travail}.
+		\item[Hobbies : \textcolor{blue}{しゅみ　は　\underline{nom/qqchを vfn} です}] \hfill \\
+		4. しゅみ　は　ピアノを　ひく　です。 \\
+		Mon hobby est de jouer au piano.
 	\end{description}
-\end{Japanese}  
-\end{CJK}
-
-
-\chapter{Obligation}
-
-\section{Forme d'obligation}
-
-\begin{CJK}{UTF8}{}  
-\begin{Japanese}
-	\underline{\emph{verbe}}なければなりません。-> Il faut... \\
-	
-	Exemples : \\ \\
-	1. まいあさ　ごはんを　\underline{たべ}なければなりません。 (\underline{たべ}ます)\\
-	Il faut manger tous les jours. \\ \\
-	2. くすりを　のみますから　\underline{ね}なければなりません。(\underline{ね}ます) \\
-	Il faut dormir après avoir bu ses médicaments. \\ \\
-	3. この　まんがを　\underline{かい}なければなりません。 (\underline{かい}ます)\\
-	Il faut acheter ce manga.
-\end{Japanese}  
-\end{CJK}
-
-\section{Non obligation}
-
-\begin{CJK}{UTF8}{}  
-\begin{Japanese}
-	\underline{\emph{verbe}}なくてもいいです。-> Ce n'est pas la peine, pas oblig\'e de... \\
-	
-	Exemples : \\ \\
-	1. この　てがみを　\underline{かき}なくてもいいです。 (\underline{かき}ます) \\
-	C'est n'est pas la peine d'écrire cette lettre. \\ \\
-	2. たこさんを　\underline{よび}なくてもいいです。 (\underline{よび}ます) \\
-	Ce n'est pas la peine d'appeler monsieur Poulpe. \\ \\
-	3. あさっては　がっこうへ　いきなくてもいいです。 \\
-	Ce n'est pas la peine d'aller \`a l'école après-demain.
 \end{Japanese}  
 \end{CJK}
 
@@ -296,11 +331,11 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 
 \section{Comparatif}
 
-\subsection{Comparer}
+\subsection{Comparaison simple}
 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
-	Pour comparer un objet A \`a un objet B, on utilise より. \\ \\
+	Pour comparer un objet A \`a un objet B, on utilise \textcolor{red}{より}. \\ \\
 	1. \textcolor{red}{ねこ}　は　\textcolor{blue}{いぬ}　\underline{より}　かっくい　です。 \\
 	Comparés aux \textcolor{blue}{chiens}, les \textcolor{red}{chats} sont plus cools. \\ \\
 	2. \textcolor{red}{パソコン}　は　\textcolor{blue}{車}　より　やすい　です。 \\
@@ -312,9 +347,14 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
-	Pour demander une comparaison entre deux choses, on liste les deux objets avec la particule と après chacun puis on fait suivre avec どちらが \, pour préciser lequel d'entre eux est le plus qualifié par l'adjectif. (Explication dont on peut se passer...). \\ \\
-	1. にほんごと　えいごと　どちら　が　たさしい　ですか。 \\
-	Quel est le plus facile entre le japonais et l'anglais ?
+	Pour demander une comparaison entre deux choses, on liste les deux objets avec la particule と \, après chacun puis on fait suivre avec \textcolor{red}{どちらが} \, pour préciser lequel d'entre eux est le plus qualifi\'e par l'adjectif. (Explication dont on peut se passer...). \\ \\
+	3. にほんごと　えいごと　どちら　が　たさしい　ですか。 \\
+	Quel est le plus facile entre le japonais et l'anglais ? \\ 
+	\\
+	Mais la réponse à cette question est spécifique dans sa forme. En comparant A avec B, il faut imaginer que A et B forment deux camps et l'adjectif se trouve entre les deux. Il faut dire dans quel camp serait l'adjectif (c'est ma façon de voir). \\
+	\\
+	4.　えいごの　ほう　が　やさしい　です。 \\
+	L'anglais est plus facile.
 \end{Japanese}  
 \end{CJK}
 
@@ -324,9 +364,9 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 \begin{Japanese}
 	Le superlatif permet de désigner un numéro1 \`a partir d'une liste d'éléments (minimum 3) ou d'un thème en général. Et une petite forme générale : \\
 	Thème/liste, interrogatif(doko, dare...) が　いちばん \, adj ですか。 \\ \\
-	1. \textcolor{blue}{あなたの　ともだち}で　だれ　が　いちばん　\underline{たかい}　ですか。 \\
+	5. \textcolor{blue}{あなたの　ともだち}で　だれ　が　いちばん　\underline{せがたかい}　ですか。 \\
 	Parmi \textcolor{blue}{tes amis}, qui est le plus \underline{grand} ? \\ \\
-	2. くるまと　ひこうきと　じでんしゃと　なに　が　いちばん　はやい　ですか。 \\
+	6. くるまと　ひこうきと　じでんしゃと　なに　が　いちばん　はやい　ですか。 \\
 	Entre les voitures, les avions et les vélos, qu'est-ce qui est le plus rapide ?
 	
 \end{Japanese}  
