--- a/grammar.tex
+++ b/grammar.tex
@@ -179,7 +179,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 		たべません
 		\item[Passé] \hfill \\
 		たべました
-		\item[Néégatif passé] \hfill \\
+		\item[Négatif passé] \hfill \\
 		たべません　でした
 	\end{description}
 \end{Japanese}  
