--- a/grammar.tex
+++ b/grammar.tex
@@ -336,7 +336,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
 	Pour comparer un objet A \`a un objet B, on utilise \textcolor{red}{より}. \\ \\
-	1. \textcolor{red}{ねこ}　は　\textcolor{blue}{いぬ}　\underline{より}　かっくい　です。 \\
+	1. \textcolor{red}{ねこ}　は　\textcolor{blue}{いぬ}　\underline{より}　かっこいい　です。 \\
 	Comparés aux \textcolor{blue}{chiens}, les \textcolor{red}{chats} sont plus cools. \\ \\
 	2. \textcolor{red}{パソコン}　は　\textcolor{blue}{車}　より　やすい　です。 \\
 	Comparés aux \textcolor{blue}{voitures}, les \textcolor{red}{ordinateurs} sont \`a plus petit prix.
@@ -348,7 +348,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
 	Pour demander une comparaison entre deux choses, on liste les deux objets avec la particule と \, après chacun puis on fait suivre avec \textcolor{red}{どちらが} \, pour préciser lequel d'entre eux est le plus qualifi\'e par l'adjectif. (Explication dont on peut se passer...). \\ \\
-	3. にほんごと　えいごと　どちら　が　たさしい　ですか。 \\
+	3. にほんごと　えいごと　どちら　が　やさしい　ですか。 \\
 	Quel est le plus facile entre le japonais et l'anglais ? \\ 
 	\\
 	Mais la réponse à cette question est spécifique dans sa forme. En comparant A avec B, il faut imaginer que A et B forment deux camps et l'adjectif se trouve entre les deux. Il faut dire dans quel camp serait l'adjectif (c'est ma façon de voir). \\
