--- a/grammar.tex
+++ b/grammar.tex
@@ -127,7 +127,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
-	Avec les adjectifs en na, on peut le placer dans la phrase comme un adjectif en i, mais il faut ajouter la particule \textcolor{red}{な} \,juste après l'adjectif. \\ \\
+	Avec les adjectifs en na, on peut les placer dans la phrase comme un adjectif en i, mais il faut ajouter la particule \textcolor{red}{な} \,juste après l'adjectif. \\ \\
 	\textcolor{blue}{きれい\underline{な}}　はな。\\
 	Une jolie fleur.
 \end{Japanese}  
