--- a/grammar.tex
+++ b/grammar.tex
@@ -316,7 +316,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 		Je sais écrire les hiraganas. \\ \\
 		2. うまに　のる こと が　です。 \\
 		Je sais monter \`a cheval. \\
-		\emph{Attention, la fin de phrase change quand on fait avec un verbe. Ici, uma ni norimasu c'est le verbe monter à cheval.}
+		\emph{Attention, la fin de phrase change quand on fait avec un verbe. Ici, uma ni norimasu c'est le verbe monter \`a cheval.}
 		\item[Avant de : \textcolor{blue}{\underline{vfn} まえに　\underline{\qquad}ます}] \hfill \\
 		3. わたし　は　\textcolor{red}{しごとに　いく}　まえに　\textcolor{blue}{くすりを　のみます}。 \\
 		Je \textcolor{blue}{bois mes médicaments} avant d'\textcolor{red}{aller au travail}.
