--- a/grammar.tex
+++ b/grammar.tex
@@ -215,7 +215,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 			1. のんで　ください。 \\
 			Buvez-s'il vous plait.
 		\item[Action en cours : \textcolor{blue}{\underline{v}て　います}] \hfill \\
-			2. わtしは　サンドイッチを　たべて　います。 \\
+			2. わたしは　サンドイッチを　たべて　います。 \\
 			Je suis en train de manger un sandwich.
 		\item[Permission : \textcolor{blue}{\underline{v}ても　いいですか}] \hfill \\
 			3. かいても　いいですか。 \\
@@ -272,7 +272,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 \begin{Japanese}
 	\begin{description}
 		\item[Négation : \textcolor{blue}{\underline{v}ないで　ください}] \hfill \\
-		1. この　ほんを　のまないで　ください。 \\
+		1. この　ほんを　よまないで　ください。 \\
 		Ne lit pas ce livre.
 		\item[Obligation : \textcolor{blue}{\underline{$v_{a}$}なければ　なりません}] \hfill \\
 		2. くすりを　のみますから　\underline{ね}なければなりません。 \\
@@ -360,6 +360,8 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 
 \section{Superlatif}
 
+\subsection{Question}
+
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
 	Le superlatif permet de désigner un numéro1 \`a partir d'une liste d'éléments (minimum 3) ou d'un thème en général. Et une petite forme générale : \\
@@ -368,6 +370,17 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 	Parmi \textcolor{blue}{tes amis}, qui est le plus \underline{grand} ? \\ \\
 	6. くるまと　ひこうきと　じでんしゃと　なに　が　いちばん　はやい　ですか。 \\
 	Entre les voitures, les avions et les vélos, qu'est-ce qui est le plus rapide ?
+	
+\end{Japanese}  
+\end{CJK}
+
+\subsection{Réponse}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	Pour répondre à la question d'un superlatif, il faut garder la particule が. \\ \\
+	7. ひこうき　\underline{が　いちばん}　はやい　です。 \\
+	Les avions sont les plus rapides.
 	
 \end{Japanese}  
 \end{CJK}
