--- a/grammar.tex
+++ b/grammar.tex
@@ -321,7 +321,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 		3. わたし　は　\textcolor{red}{しごとに　いく}　まえに　\textcolor{blue}{くすりを　のみます}。 \\
 		Je \textcolor{blue}{bois mes médicaments} avant d'\textcolor{red}{aller au travail}.
 		\item[Hobbies : \textcolor{blue}{しゅみ　は　\underline{nom/qqchを vfn} です}] \hfill \\
-		4. しゅみ　は　ピアノを　ひく　です。 \\
+		4. しゅみ　は　ピアノを　ひく こと　です。 \\
 		Mon hobby est de jouer au piano.
 	\end{description}
 \end{Japanese}  
