--- a/grammar.tex
+++ b/grammar.tex
@@ -320,8 +320,8 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 		\item[Avant de : \textcolor{blue}{\underline{vfn} まえに　\underline{\qquad}ます}] \hfill \\
 		3. わたし　は　\textcolor{red}{しごとに　いく}　まえに　\textcolor{blue}{くすりを　のみます}。 \\
 		Je \textcolor{blue}{bois mes médicaments} avant d'\textcolor{red}{aller au travail}.
-		\item[Hobbies : \textcolor{blue}{しゅみ　は　\underline{nom/qqchを vfn} です}] \hfill \\
-		4. しゅみ　は　ピアノを　ひく こと　です。 \\
+		\item[Hobbies : \textcolor{blue}{しゅみ　は　\underline{nom/qqchを vfn} こと　です}] \hfill \\
+		4. しゅみ　は　ピアノを　ひく　こと　です。 \\
 		Mon hobby est de jouer au piano.
 	\end{description}
 \end{Japanese}  
