--- a/grammar.tex
+++ b/grammar.tex
@@ -278,7 +278,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 		2. くすりを　のみますから　\underline{ね}なければなりません。 \\
 		Il faut dormir après avoir bu ses médicaments.
 		\item[Non obligation : \textcolor{blue}{\underline{$v_{a}$}なくても　いいです}] \hfill \\
-		3. あさっては　がっこうへ　いきなくてもいいです。 \\
+		3. あさっては　がっこうへ　いかなくてもいいです。 \\
 		Ce n'est pas la peine d'aller \`a l'école après-demain.
 	\end{description}
 \end{Japanese}
