--- a/grammar.tex
+++ b/grammar.tex
@@ -236,7 +236,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 				7. わたし　は　いぬ　をもって　います。 \\
 				Je possède un chien.
 				\item[Etre mari\'e] \hfill \\
-				8. けっこん　して　います。 \\
+				8. わたし　は　けっこん　して　います。 \\
 				Je suis marié. \\
 				\emph{Célibataire : どくしん}
 			\end{description}
@@ -255,7 +255,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 			の\textcolor{red}{み}ます -> の\textcolor{red}{ま}ない \\
 			と\textcolor{red}{り}ます -> と\textcolor{red}{ら}ない \\
 			か\textcolor{red}{い}ます -> か\textcolor{red}{わ}ない \\
-			ま\textcolor{red}{ち}ます -> ま\textcolor{red}{さ}ない \\
+			ま\textcolor{red}{ち}ます -> ま\textcolor{red}{た}ない \\
 			はな\textcolor{red}{し}ます -> はな\textcolor{red}{さ}ない \\
 			か\textcolor{red}{き}ます -> か\textcolor{red}{か}ない \\
 			ぬ\textcolor{red}{ぎ}ます -> ぬ\textcolor{red}{が}ない
